2007-04-27 Borut Razem <borut.razem AT siol.net>

	* src/SDCCast.c: fixed feature request
	  #1547512: Redundant strings linked when using sizeof("abc")

2007-04-23 Borut Razem <borut.razem AT siol.net>

	* doc/sdccman.lyx, src/SDCCmain.c:
	  peep-hole comments are generated only if --fverbose-asm option is
	  specified and --no-peep-comments is not, as proposed by Frieder.
	* support/regression/Makefile.in: compile regression tests with
	  --fverbose-asm option so one can "grep" whether a new (or an old)
	  peephole is (still) applied; requested by Frieder.

2007-04-23 Kevin Buettner <kevin AT buettner.to>

	* device/include/pic/pic16f886.h,
	* device/include/pic/pic16f887.h,
	* device/lib/pic/libdev/pic16f886.c,
	* device/lib/pic/libdev/pic16f887.c,
	* device/include/pic/pic14devices.txt,
	* device/lib/pic/libdev/devices.txt: Add 16f886 and 16f887.

2007-04-23 Kevin Buettner <kevin AT buettner.to>

	* device/lib/pic/libsdcc/idata.c: PAGESEL _main before going there,
	  fixes #1704666

2007-04-23 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* device/lib/_memset.c: assembler version for mcs51

2007-04-22 Borut Razem <borut.razem AT siol.net>

	* support/scripts/listerr.c: program to create the list of errors and
	  warnings list from - added
	* doc/sdccman.lyx: removed the note
	  "For list of warnings and corresponding codes, see err_warn.txt"
	* src/SDCCsymt.c: fixed bug #1699804:
	  Bug with some uses of sizeof(static local array) (MCS51)
	* support/regression/tests/bug-1699804.c: added

2007-04-20 Maarten Brock <sourceforge.brock AT dse.nl>

	* as/mcs51/asmain.c (search_path_append, search_path_fopen): new, added,
	  (main): added option -i,
	  (asmbl, case S_INCL): use search_path_fopen,
	  mostly from patch 1579668 by Peter Miller, thanks
	* src/z80/main.c: fixed typo --callee-saves-bc
	* device/include/mcs51/compiler.h: added sfrword for Tasking

2007-04-20 Borut Razem <borut.razem AT siol.net>
